--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1 {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin: 0;
+    margin: 0 0 20px 0;;
 }
 
 p, h2, h3, h4 {
@@ -43,6 +43,11 @@ h2 {
 
 p {
     font-size: 36px;
+    margin-bottom: 20px;
+}
+
+em {
+    font-weight: bolder;
 }
 
 nav {
