--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 :root {
@@ -16,6 +17,7 @@
 body {
     background-color: #010101;
     color: white;
+    margin: 0;
 }
 
 h1 {
@@ -25,7 +27,7 @@ h1 {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin: 0 0 20px 0;;
+    margin: 0 0 20px 0;
 }
 
 p, h2, h3, h4 {
@@ -56,7 +58,7 @@ nav {
     justify-content: space-between;
     height: 144px;
     padding: 0 2%;
-}
+}  
 
 nav .nav-center {
     width: 40%;
@@ -256,6 +258,5 @@ footer p {
 
 .faq-answer {
     display: none;
-
 }
 
